# industrial_core

./: .gitignore  .gitmodules  .travis.yml  README.md  stack.xml
.github/workflows/: ci_bionic.yml  ci_focal.yml
arm_workspace_evaluator/: manifest.xml
arm_workspace_evaluator/src/: arm_workspace_evaluator.cpp
industrial_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
industrial_deprecated/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
industrial_depricated/: mainpage.dox  manifest.xml
industrial_depricated/launch/: planning_environment_visualization_prerequisites.launch
industrial_msgs/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
industrial_msgs/msg/: DynamicJointPoint.msg  DynamicJointState.msg  DynamicJointTrajectory.msg  DynamicJointTrajectoryFeedback.msg  DynamicJointsGroup.msg  RobotStatus.msg
industrial_msgs/srv/: CmdJointTrajectoryEx.srv  GetEnabledStatus.srv
industrial_robot_client/: CHANGELOG.rst  CMakeLists.txt  package.xml
industrial_robot_client/cmake/: platform_build_flags.cmake.in
industrial_robot_client/include/industrial_robot_client/: joint_feedback_handler.h  joint_relay_handler.h  joint_trajectory_action.h  joint_trajectory_action2.cpp  joint_trajectory_action2.h  joint_trajectory_downloader.h  joint_trajectory_interface.h  joint_trajectory_streamer.h  robot_group.h  utils.h
industrial_robot_client/launch/: robot_interface_download.launch  robot_interface_streaming.launch  robot_state_visualize.launch
industrial_robot_client/src/: generic_joint_trajectory_action2_node.cpp  joint_feedback_handler.cpp  joint_trajectory_action.cpp  joint_trajectory_action2.cpp  joint_trajectory_interface.cpp  joint_trajectory_streamer.cpp  robot_state_interface.cpp  utils.cpp
industrial_robot_simulator/: CHANGELOG.rst  CMakeLists.txt  industrial_robot_simulator  package.xml  setup.py
industrial_trajectory_filters/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  planning_request_adapters_plugin_description.xml
industrial_trajectory_filters/include/industrial_trajectory_filters/: filter_base.h  n_point_filter.h  smoothing_trajectory_filter.h  uniform_sample_filter.h
industrial_trajectory_filters/src/: add_smoothing_filter.cpp  n_point_filter.cpp  smoothing_trajectory_filter.cpp  uniform_sample_filter.cpp
industrial_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
industrial_utils/include/industrial_utils/: param_utils.h  utils.h
industrial_utils/src/: param_utils.cpp  utils.cpp
robotiq/: manifest.xml
robotiq/cfg/: s-model_articulated.urdf  s-model_articulated.xacro  s-model_articulated_macro.xacro  s-model_finger_articulated_macro.xacro  s-model_mesh.xacro  s-model_mesh.xml  s-model_mesh_macro.xacro
simple_message/: CHANGELOG.rst  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
simple_message/cmake/: platform_build_flags.cmake  simple_message_linker_setup.cmake
simple_message/include/simple_message/: byte_array.h  comms_fault_handler.h  joint_data.h  joint_feedback.h  joint_feedback_ex.h  joint_traj.h  joint_traj_pt.h  joint_traj_pt_full.h  joint_traj_pt_full_ex.h  log_wrapper.h  message_manager.h  ping_handler.h  robot_status.h  shared_types.h  simple_message.h  simple_serialize.h  smpl_msg_connection.h  typed_message.h
simple_message/include/simple_message/messages/: joint_feedback_ex_message.h  joint_feedback_message.h  joint_message.h  joint_traj_pt_full_ex_message.h  joint_traj_pt_full_message.h  joint_traj_pt_message.h  robot_status_message.h
simple_message/include/simple_message/socket/: simple_socket.h  tcp_client.h  tcp_server.h  tcp_socket.h  udp_client.h  udp_server.h  udp_socket.h
simple_message/src/: byte_array.cpp  joint_data.cpp  joint_feedback.cpp  joint_feedback_ex.cpp  joint_traj.cpp  joint_traj_pt.cpp  joint_traj_pt_full.cpp  joint_traj_pt_full_ex.cpp  message_handler.cpp  message_manager.cpp  ping_handler.cpp  ping_message.cpp  robot_status.cpp  simple_comms_fault_handler.cpp  simple_message.cpp  smpl_msg_connection.cpp
simple_message/src/messages/: joint_feedback_ex_message.cpp  joint_feedback_message.cpp  joint_message.cpp  joint_traj_pt_full_ex_message.cpp  joint_traj_pt_full_message.cpp  joint_traj_pt_message.cpp  robot_status_message.cpp
simple_message/src/socket/: simple_socket.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp  udp_client.cpp  udp_server.cpp  udp_socket.cpp
simple_message/test/: utest.cpp  utest_message.cpp
