<package>
  <name>industrial_deprecated</name>
  <version>1.0.0</version>
  <description>
	The Industrial deprecated package contains nodes, launch files, etc... that are slated for 
	deprecation.  This package is the last place something 		will end up before being deleted.  
	If you are missing a package/node and find it's contents here, then you should consider 
	a replacement.
  </description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_deprecated</url>
  <author>Shaun M. Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
