<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>industrial_robot_client</name>
  <version>0.7.1</version>
  <description>industrial robot client contains generic clients for connecting 
     to industrial robot controllers with servers that adhere to the
     simple message protocol.
  </description>
  <author>Jeremy Zoss</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_robot_client</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>simple_message</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>urdf</depend>
  <depend>industrial_msgs</depend>
  <depend>industrial_utils</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <test_depend>rosunit</test_depend>
</package>
