<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>industrial_robot_simulator</name>
  <version>0.7.3</version>
  <description>The industrial robot simulator is a stand in for industrial robot driver node(s).  It adheres to the driver specification for industrial robot controllers.</description>

  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_robot_simulator</url>
  <author>Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>industrial_msgs</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>
</package>
