<package>
  <name>industrial_trajectory_filters</name>
  <version>1.0.0</version>
  <description>industrial_trajectory_filters</description>

  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_robot_client</url>
  <author>Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>trajectory_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <export>	
    <moveit_core plugin="${prefix}/planning_request_adapters_plugin_description.xml"/> 
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" cflags="-I${prefix}/include"/>
  </export>
</package>
