<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>industrial_trajectory_filters</name>
  <version>0.7.3</version>
  <description>
   <p>
     ROS Industrial libraries/plugins for filtering trajectories.
   </p>
   <p>
     This package is part of the ROS Industrial program and contains libraries
     and moveit plugins for filtering robot trajectories.
   </p>
  </description>
  <author>Shaun Edwards</author>
  <author email="jnicho@swri.org">Jorge Nicho</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/industrial_trajectory_filters</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_core/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_depend>
  <build_export_depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</build_export_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">liborocos-kdl</exec_depend>

  <depend>class_loader</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend condition="$ROS_DISTRO == melodic">orocos_kdl</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>

  <export>	
    <moveit_core plugin="${prefix}/planning_request_adapters_plugin_description.xml"/> 
  </export>
</package>
